<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.fr3estudio.sherpa.sherpav3p.RegisterActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.fr3estudio.sherpa.NewAccountActivity"
            android:background="@color/white">

            <TextView
                android:id="@+id/lb_searching1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcome2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/reg_label"

                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/r_name_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/fst_name"
                android:singleLine="true" >


            </EditText>

            <EditText
                android:id="@+id/r_last_name_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:hint="@string/lst_name"
                android:singleLine="true" />

            <EditText
                android:id="@+id/r_email_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <!-- EditText
                android:id="@+id/r_address_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/st_address" /-->

            <EditText
                android:id="@+id/r_cellphone_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/cellphone"
                android:singleLine="true" />

            <EditText
                android:id="@+id/r_passwd_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/passwd"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/r_passwdr_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_input_gris"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/conf_passwd"
                android:inputType="textPassword" />

            <RadioButton
                android:id="@+id/r_term_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/accept_term_cond" />

            <Button
                android:id="@+id/r_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/darkblue_bg"
                android:onClick="onRegisterClicked"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
