<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fr3estudio.sherpa.sherpav3p.MainMenuActivity"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_menu_lb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/greet_light_blue_below"
                android:gravity="center"
                android:text="@string/main_menu_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray" />

            <Button
                android:id="@+id/deliver_service_lb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_delivery"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="newDeliver"
                android:text="@string/delivery_service"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/special_service_lb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_hour"
                android:onClick="newSpecial"
                android:text="@string/hour_service"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
