<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fr3estudio.sherpa.sherpav3p.LoginActivity"
    android:orientation="horizontal"
    >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
             >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lb_searching"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/welcome"
                    android:clickable="false"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/welcome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <AutoCompleteTextView
                    android:id="@+id/user_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fondo_input"
                    android:ems="10"
                    android:hint="@string/user"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete|textEmailAddress"
                    android:nextFocusDown="@+id/passwd_f"
                    android:singleLine="true" >

                    <requestFocus />
                </AutoCompleteTextView>

                <EditText
                    android:id="@+id/passwd_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fondo_input"
                    android:ems="10"
                                        android:hint="@string/passwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/rememberPass_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fondo_input_blanco"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="rememberPasswd" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/forgotPass"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/to_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_bg"
                    android:onClick="loginAccount"
                    android:text="@string/log_in"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/next_bt_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/darkblue_bg"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="createAccount"
                    android:text="@string/new_account"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
